[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/BountySelect.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=3]
[ext_resource path="res://Scripts/RoomSelect.gd" type="Script" id=4]
[ext_resource path="res://Scenes/FloatTextManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Ship/Floor/Floor_001_Long.png" type="Texture" id=6]
[ext_resource path="res://Resources/TileSets/RoomNavSmall.tres" type="TileSet" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150, 75 )

[node name="RoomSmall" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 5, 5 )
cell_quadrant_size = 5
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -851970, 0, 0, -851969, 0, 0, -917504, 0, 0, -917503, 0, 0, -786434, 0, 0, -786433, 0, 0, -851968, 0, 0, -851967, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -196623, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0 )

[node name="FloorSprite" type="Sprite" parent="."]
position = Vector2( 75, 0 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 75, 0 )
shape = SubResource( 1 )

[node name="Positions" type="Node2D" parent="."]

[node name="Pos_01_UpperLeft" type="Position2D" parent="Positions"]
position = Vector2( -35, -35 )

[node name="Pos_01_UpperRight" type="Position2D" parent="Positions"]
position = Vector2( 35, -35 )

[node name="Pos_01_LowerLeft" type="Position2D" parent="Positions"]
position = Vector2( -35, 35 )

[node name="Pos_01_LowerRight" type="Position2D" parent="Positions"]
position = Vector2( 35, 35 )

[node name="Pos_01_MiddlePos" type="Position2D" parent="Positions"]

[node name="Pos_02_UpperLeft" type="Position2D" parent="Positions"]
position = Vector2( 115, -35 )

[node name="Pos_02_UpperRight" type="Position2D" parent="Positions"]
position = Vector2( 185, -35 )

[node name="Pos_02_LowerLeft" type="Position2D" parent="Positions"]
position = Vector2( 115, 35 )

[node name="Pos_02_LowerRight" type="Position2D" parent="Positions"]
position = Vector2( 185, 35 )

[node name="Pos_02_MiddlePos" type="Position2D" parent="Positions"]

[node name="Walls" type="Node2D" parent="."]

[node name="T1" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 0, -75 )

[node name="T2" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 75, -75 )

[node name="T3" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 150, -75 )

[node name="B1" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 0, 75 )

[node name="B2" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 75, 75 )

[node name="B3" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 150, 75 )

[node name="L2-A" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( -75, 0 )

[node name="L2-B" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( -75, 0 )

[node name="R2-A" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 225, 0 )

[node name="R2-B" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 225, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Edit" type="Button" parent="."]
margin_left = 50.4628
margin_top = -9.61743
margin_right = 95.4628
margin_bottom = 10.3826
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BountyStart" type="Button" parent="."]
visible = false
margin_left = -20.0
margin_top = -9.47368
margin_right = -8.0
margin_bottom = 10.5263
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -38.0
margin_top = -42.0
margin_right = 41.0
margin_bottom = -28.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloatTextManager" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.374573, -45.3238 )

[node name="RoomSelect" type="WindowDialog" parent="."]
margin_left = 179.0
margin_top = 416.0
margin_right = 456.0
margin_bottom = 629.0
window_title = "Build Room"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildRoom" type="Button" parent="RoomSelect"]
anchor_left = 0.318
anchor_top = 0.773
anchor_right = 0.685
anchor_bottom = 0.912
margin_left = -3.08601
margin_top = -6.64902
margin_right = -0.74501
margin_bottom = -0.256012
text = "Build Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="RoomSelect"]
anchor_left = 0.307
anchor_top = 0.273
anchor_right = 0.69
anchor_bottom = 0.437
margin_left = 0.960999
margin_top = -6.149
margin_right = -0.13002
margin_bottom = -0.0810013
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RoomSelect"]
anchor_left = 0.289
anchor_top = 0.116
anchor_right = 0.715
anchor_bottom = 0.152
margin_left = 0.0730362
margin_top = -6.99573
margin_right = -3.92897
margin_bottom = 0.0202637
text = "Select Room Type:"

[node name="CostLabel" type="Label" parent="RoomSelect"]
anchor_left = 0.289
anchor_top = 0.116
anchor_right = 0.715
anchor_bottom = 0.152
margin_left = 1.36539
margin_top = 92.5156
margin_right = 1.36339
margin_bottom = 99.5316
text = "Cost: "

[node name="BountySelect" type="WindowDialog" parent="."]
margin_left = 179.0
margin_top = 416.0
margin_right = 456.0
margin_bottom = 629.0
window_title = "Build Room"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="BountySelect"]
anchor_left = 0.318
anchor_top = 0.773
anchor_right = 0.685
anchor_bottom = 0.912
margin_left = -3.08601
margin_top = -6.64902
margin_right = -0.74501
margin_bottom = -0.256012
text = "Start Bounty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="BountySelect"]
anchor_left = 0.307
anchor_top = 0.273
anchor_right = 0.69
anchor_bottom = 0.437
margin_left = 0.960999
margin_top = -6.149
margin_right = -0.13002
margin_bottom = -0.0810013
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BountySelect"]
anchor_left = 0.289
anchor_top = 0.116
anchor_right = 0.715
anchor_bottom = 0.152
margin_left = 0.913979
margin_top = -7.83661
margin_right = -3.08803
margin_bottom = -0.820616
text = "Select Bounty:"
align = 1

[node name="CostLabel" type="Label" parent="BountySelect"]
anchor_left = 0.289
anchor_top = 0.116
anchor_right = 0.715
anchor_bottom = 0.152
margin_left = 1.36539
margin_top = 92.5156
margin_right = 1.36339
margin_bottom = 99.5316
text = "Cost: "
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Edit" to="." method="_on_Edit_pressed"]
[connection signal="button_up" from="BountyStart" to="." method="_on_MissionStart_button_up"]
[connection signal="about_to_show" from="RoomSelect" to="RoomSelect" method="_on_RoomBuildWindowDialog_about_to_show"]
[connection signal="button_up" from="RoomSelect/BuildRoom" to="RoomSelect" method="_on_BuildRoom_button_up"]
[connection signal="item_selected" from="RoomSelect/OptionButton" to="RoomSelect" method="_on_OptionButton_item_selected"]
[connection signal="about_to_show" from="BountySelect" to="BountySelect" method="_on_MissionSelect_about_to_show"]
[connection signal="button_up" from="BountySelect/Send" to="BountySelect" method="_on_Send_button_up"]
[connection signal="item_selected" from="BountySelect/OptionButton" to="BountySelect" method="_on_OptionButton_item_selected"]
